--- a/papers/Parallelism.bib
+++ b/papers/Parallelism.bib
@@ -87,7 +87,7 @@ PLDI
 @STRING{PLDI95 = "PLDI '95: Proceedings of the 1995 " # PLDI}
 @STRING{PLDI02 = "PLDI '02: Proceedings of the 2002 " # PLDI}
 @STRING{PLDI03 = "PLDI '03: Proceedings of the 2003 " # PLDI}
-@STRING{PLDI03 = "PLDI '08: Proceedings of the 2008 " # PLDI}
+@STRING{PLDI08 = "PLDI '08: Proceedings of the 2008 " # PLDI}
 @STRING{PLDI12 = "PLDI '12: Proceedings of the 2012 " # PLDI}
 
 PPOPP
@@ -193,6 +193,16 @@ AAAA
   Author = {Accelereyes},
   Title  = {Jacket},
   Note   = {{\tt http://www.accelereyes.com}}
+}
+
+@INPROCEEDINGS{Agak06,
+  Author    = {Agakov, F. and Bonilla, E. and Cavazos, J. and Franke, B. and
+               Fursin, G. and O'Boyle, M. F. P. and Thomson, J. and
+               Toussaint, M. and Williams, C. K. I.},
+  Title     = {Using Machine Learning to Focus Iterative Optimization},
+  Booktitle = CGO05,
+  Year      = {2006},
+  Pages     = {295--305},
 }
 
 @ARTICLE{Ald01,
